# canpp

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  Dockerfile.sh  devcontainer.json  docker_entrypoint.sh
apps/: CMakeLists.txt
apps/can_cli/: CMakeLists.txt
apps/can_cli/src/: main.cpp
apps/can_gui/: CMakeLists.txt
apps/can_gui/include/can_gui/: gui_application.hpp
apps/can_gui/src/: gui_application.cpp  main.cpp
assets/: readme.md
docs/: guide_lines.md  requirements.md
docs/architecture/: 01_architecture_overview.md  02_module_decomposition.md  03_interface_contracts.md  04_runtime_flows.md  05_performance_design.md  06_traceability_matrix.md  07_development_phasing.md  README.md
docs/detailed_design/: 01_design_rules.md  02_component_detailed_design.md  README.md
docs/detailed_design/components/: README.md  can_app.md  can_cache.md  can_cli.md  can_core.md  can_dbc.md  can_decode.md  can_export.md  can_gui.md  can_index.md  can_query.md  can_reader_api.md  can_readers_binary.md  can_readers_text.md  can_script_api.md  can_script_lua.md
libraries/: CMakeLists.txt
libraries/can_app/: CMakeLists.txt
libraries/can_app/include/can_app/: can_app.hpp
libraries/can_app/src/: can_app.cpp
libraries/can_cache/: CMakeLists.txt
libraries/can_cache/include/can_cache/: cache_reader.hpp
libraries/can_cache/src/: cache_reader.cpp
libraries/can_core/: CMakeLists.txt
libraries/can_core/include/can_core/: can_event.hpp  context_request.hpp  core_types.hpp  error_info.hpp  filter_expr.hpp  match_reference.hpp  query_spec.hpp  trace_metadata.hpp
libraries/can_core/src/: can_core.cpp
libraries/can_dbc/: CMakeLists.txt
libraries/can_dbc/include/can_dbc/: database.hpp
libraries/can_dbc/src/: database.cpp
libraries/can_decode/: CMakeLists.txt
libraries/can_decode/include/can_decode/: decoder.hpp
libraries/can_decode/src/: decoder.cpp
libraries/can_export/: CMakeLists.txt
libraries/can_export/include/can_export/: exporter.hpp
libraries/can_export/src/: exporter.cpp
libraries/can_index/: CMakeLists.txt
libraries/can_index/include/can_index/: trace_index.hpp
libraries/can_index/src/: trace_index.cpp
libraries/can_query/: CMakeLists.txt
libraries/can_query/include/can_query/: query_executor.hpp
libraries/can_query/src/: query_executor.cpp
libraries/can_reader_api/: CMakeLists.txt
libraries/can_reader_api/include/can_reader_api/: trace_reader.hpp
libraries/can_readers_binary/: CMakeLists.txt
libraries/can_readers_binary/include/can_readers_binary/: binary_trace_reader.hpp
libraries/can_readers_binary/src/: binary_trace_reader.cpp
libraries/can_readers_text/: CMakeLists.txt
libraries/can_readers_text/include/can_readers_text/: text_trace_reader.hpp
libraries/can_readers_text/src/: text_trace_reader.cpp
libraries/can_script_api/: CMakeLists.txt
libraries/can_script_api/include/can_script_api/: script_engine.hpp
libraries/can_script_api/src/: script_engine.cpp
libraries/can_script_lua/: CMakeLists.txt
libraries/can_script_lua/include/can_script_lua/: lua_engine.hpp
libraries/can_script_lua/src/: lua_engine.cpp
libraries/json_io/: CMakeLists.txt  json_io.hpp  json_session.hpp
libraries/logger/: CMakeLists.txt  logger.hpp
src/: CMakeLists.txt  canapp.cpp  canapp.hpp  main.cpp
src/log/: CMakeLists.txt
src/log/inc/: log.hpp
src/log/src/: log.cpp
tests/: CMakeLists.txt  itest_can_app.cpp  itest_can_cache_index.cpp  itest_can_query_flow.cpp  qtest_requirements.cpp  test_support.hpp  utest_can_cache.cpp  utest_can_core.cpp  utest_can_dbc.cpp  utest_can_decode.cpp  utest_can_export.cpp  utest_can_index.cpp  utest_can_query.cpp  utest_can_readers_binary.cpp  utest_can_readers_text.cpp  utest_can_script_api.cpp  utest_can_script_lua.cpp
tools/programs/checkpp/: checkpp
tools/programs/checkpp/config/: ignore_paths.txt
tools/tasks/: build.sh  checker.sh  cp_code.sh  cpp_style_check.sh  dependences.sh  full_clean.sh  print_tree.sh  test_all.sh
