cmake_minimum_required(VERSION 3.16)

# CMake 4 removed compatibility with policy versions older than 3.5.
# Some fetched third-party dependencies still declare older minimums.
if(CMAKE_VERSION VERSION_GREATER_EQUAL "4.0")
  set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
endif()

set(ProjectName "canpp")
project(${ProjectName} VERSION 0.0.0 LANGUAGES C CXX)

# C++ standard (target-level "features" would also work, but this is fine)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Colorize diagnostics under Ninja (or any generator)
add_compile_options(
  $<$<COMPILE_LANG_AND_ID:C,GNU>:-fdiagnostics-color=always>
  $<$<COMPILE_LANG_AND_ID:CXX,GNU>:-fdiagnostics-color=always>
  $<$<COMPILE_LANG_AND_ID:C,Clang>:-fcolor-diagnostics>
  $<$<COMPILE_LANG_AND_ID:CXX,Clang>:-fcolor-diagnostics>
)

# Warnings (per language)
add_compile_options(
  $<$<COMPILE_LANGUAGE:C>:-Wall>
  $<$<COMPILE_LANGUAGE:CXX>:-Wall>
)

# Export compile commands (also enabled in presets; harmless to keep)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Feature toggles coming from presets; provide defaults for non-preset runs
option(ENABLE_LOG "Enable logging" OFF)
option(ENABLE_RENDER "Enable rendering" ON)
option(ENABLE_TEST "Enable tests" OFF)
option(CANPP_ENABLE_DEVELOP_DATA "Expose the data folder as a development project asset set" OFF)

if(ENABLE_TEST)
  include(CTest)
endif()

# Project-wide compile definitions (directory scope)
add_compile_definitions(
  ASSETS_PATH="${CMAKE_SOURCE_DIR}/assets"
  DATA_PATH="${CMAKE_SOURCE_DIR}/data"
  IMGUI_USE_WCHAR32
  $<$<BOOL:${ENABLE_LOG}>:ENABLE_LOG=true>
  $<$<BOOL:${ENABLE_RENDER}>:ENABLE_RENDER=true>
)

# ------------------------------------------------------------
# Dependencies
find_package(SDL2 REQUIRED)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/externals/modules")
find_package(SDL2_image REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(LUA REQUIRED lua5.4)

# ------------------------------------------------------------
# Subdirs
add_subdirectory(externals)
add_subdirectory(libraries)
add_subdirectory(apps)
add_subdirectory(examples)
add_subdirectory(src)

if(CANPP_ENABLE_DEVELOP_DATA)
  file(GLOB_RECURSE CANPP_DEVELOP_DATA_FILES CONFIGURE_DEPENDS
    "${CMAKE_SOURCE_DIR}/data/*")
  add_custom_target(develop_data SOURCES ${CANPP_DEVELOP_DATA_FILES})
  source_group(TREE "${CMAKE_SOURCE_DIR}/data" PREFIX "data" FILES ${CANPP_DEVELOP_DATA_FILES})
endif()

if(ENABLE_TEST AND BUILD_TESTING)
  add_subdirectory(tests)
endif()
